--- a/sass/modules/_faq-area.scss
+++ b/sass/modules/_faq-area.scss
@@ -206,6 +206,14 @@
         @media only screen and (min-width: 992px) and (max-width: 1399px){
             padding: 0 28px;
         }
+        .elementor-widget-wrap{
+            &:last-child{
+                margin-top: 38px;
+            }
+            @include sm{
+                padding-left: 0;
+            }
+        }
     }
     .faq-counter-inner{
         @include sm{ 
